Fix responsive UI layouts for Alpha 2.6.15